Changed DFD captions

--- a/src/description/users.tex
+++ b/src/description/users.tex
@@ -18,6 +18,6 @@ Ar lietotājiem saistītās datu plūsmas ir attēlotas sistēmas nultā līmeņ
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/0tāLīmeņaDPD.png}
-	\caption{0-tā līmeņa DPD}
+	\caption{0. līmeņa DPD}
 	\label{fig:dpd-0}
 \end{figure}
