--- a/src/requirements/functional-requirements/modules/auth/index.tex
+++ b/src/requirements/functional-requirements/modules/auth/index.tex
@@ -1,9 +1,9 @@
-\paragraph{Reģistrācijas un pieteikšanās modulis}
+\subsubsection{Reģistrācijas un pieteikšanās modulis}
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/ReģistrācijasPieteikšanāsModulis.png}
-	\caption{Reģistrācijas un pieteikšanās DPD}
+	\caption{Reģistrācijas un pieteikšanās moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-auth}
 \end{figure}
 
