--- a/src/requirements/functional-requirements/modules/chat/index.tex
+++ b/src/requirements/functional-requirements/modules/chat/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/TerzēšanasModulis.png}
-	\caption{Tēržēšanas DPD}
+	\caption{Tēržēšanas moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-chat}
 \end{figure}
 
