--- a/src/requirements/functional-requirements/modules/game-progress/index.tex
+++ b/src/requirements/functional-requirements/modules/game-progress/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/SpēlesGaitasModulis.png}
-	\caption{Spēles gaitas DPD}
+	\caption{Spēles gaitas moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-game-progress}
 \end{figure}
 
