--- a/src/requirements/functional-requirements/modules/game-role/index.tex
+++ b/src/requirements/functional-requirements/modules/game-role/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/SpēlesLomuModulis.png}
-	\caption{Spēles lomu uzstādījumu DPD}
+	\caption{Spēles lomu uzstādījumu moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-game-role}
 \end{figure}
 
