--- a/src/requirements/functional-requirements/modules/game-room/index.tex
+++ b/src/requirements/functional-requirements/modules/game-room/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/SpēlesIstabasModulis.png}
-	\caption{Spēles istabas DPD}
+	\caption{Spēles istabas moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-game-room}
 \end{figure}
 
