--- a/src/requirements/functional-requirements/modules/game-setup/index.tex
+++ b/src/requirements/functional-requirements/modules/game-setup/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/SpēlesUzstādījumuModulis.png}
-	\caption{Spēles uzstādījumu DPD}
+	\caption{Spēles uzstādījumu moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-game-setup}
 \end{figure}
 
