--- a/src/requirements/functional-requirements/modules/premium-user/index.tex
+++ b/src/requirements/functional-requirements/modules/premium-user/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/MaksasAbonementaModuls.png}
-	\caption{Maksas abonementu DPD}
+	\caption{Maksas abonementu moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-premium-user}
 \end{figure}
 
