--- a/src/requirements/functional-requirements/modules/price/index.tex
+++ b/src/requirements/functional-requirements/modules/price/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/CenuModulis.png}
-	\caption{Cenu DPD}
+	\caption{Cenu moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-price}
 \end{figure}
 
