--- a/src/requirements/functional-requirements/modules/user/index.tex
+++ b/src/requirements/functional-requirements/modules/user/index.tex
@@ -3,7 +3,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/LietotājuKontuModulis.png}
-	\caption{Lietotāju kontu DPD}
+	\caption{Lietotāju kontu moduļa 2. līmeņa DPD}
 	\label{fig:dpd-2-user}
 \end{figure}
 
