Fix in game room DFD and a function name

--- a/src/requirements/functional-requirements/modules/game-room/SIMF07.tex
+++ b/src/requirements/functional-requirements/modules/game-room/SIMF07.tex
@@ -1,7 +1,7 @@
 \moduleFunctionTable
-{Spēlētāju pārskata iegūšana}
+{Spēlētāju pārskats}
 {mod-func-room-player-overview}
-{Spēlētāju pārskata iegūšana}
+{Spēlētāju pārskats}
 {SIMF07}
 {
 	Funkcija ļauj administratoram iegūt pārskatu par visiem spēlētājiem noteiktā virtuālā istabā.
