working table-like functional description
Mdframed with non TikZ frame method can be used for faster preview.

--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -24,6 +24,12 @@
 \usepackage{chngcntr}
 \usepackage{longtable}
 \usepackage{ifthen}
+\usepackage{needspace}
+\usepackage[framemethod=TikZ]{mdframed}
+% uncomment and comment the line above if compile time is too long for preview,
+% but it won't compile the continuation overlay in the boxes correctly (should
+% be commented for end compilation)
+% \usepackage{mdframed}
 \usetikzlibrary{positioning}
 
 
