added first DFD description and corrected the titles

--- a/src/requirements/functional-requirements/function-modules.tex
+++ b/src/requirements/functional-requirements/function-modules.tex
@@ -4,18 +4,22 @@ Lietotāju kategorija apzīmē specifisku lietotāju grupu, kam funkcija piemīt
 Jebkurš maksas lietotājs un administrators ir uzskatāms par reģistrētu lietotāju.
 Maksas lietotājs un administrators ir norādīts kā lietotāja kategorija, ja tā ir funckijas izmantošana ir domāta tikai šai grupai vai funkcijas darbība atšķiras šīm kategorijām.
 
+1.līmeņa DPD parāda detalizētākāku 1. līmeņa (konteksta) DPD  ar sistēmas
+sadalījumu pa moduļiem. Pārskatamības dēļ DPD tika sadalīta divās daļās (skat.
+\ref{fig:dpd-1} att. un \ref{fig:dpd-2}).
+
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/1LīmeņaDPDSpēlesDatubāze.png}
-	\caption{1. līmeņa spēles DPD}
-	\label{fig:dpd-1-game}
+    \caption{1. līmeņa DPD (1)}
+	\label{fig:dpd-1}
 \end{figure}
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/1LīmeņaDPDLietotājuDatubāze.png}
-	\caption{1. līmeņa lietotāju DPD}
-	\label{fig:dpd-1-user}
+    \caption{1. līmeņa DPD (2)}
+	\label{fig:dpd-2}
 \end{figure}
 \eject
 
