feat(section 3): add sections and subsections

--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -130,6 +130,7 @@
 \input{./src/legends.tex}
 \input{./src/description/index.tex}
 \input{./src/requirements/index.tex}
+\input{./src/design/index.tex}
 % \input{./src/test.tex}
 
 \end{document}
