renamed the specification table function

--- a/src/utils/function-table.tex
+++ b/src/utils/function-table.tex
@@ -27,7 +27,7 @@
 	% 	}
 }
 
-\newcommand{\moduleFunctionTableItem}[2]{
+\newcommand{\specificationTableItem}[2]{
 	\begin{mdframed}
 		\textbf{#1}
 	\end{mdframed}
@@ -42,11 +42,11 @@
 	\begin{table}[h]
 		\caption{#1}\label{tab:#2}
 	\end{table}
-	\moduleFunctionTableItem{Funkcijas nosaukums}{#3}
-	\moduleFunctionTableItem{Funkcijas identifikators}{#4}
-	\moduleFunctionTableItem{Ievads}{#5}
-	\moduleFunctionTableItem{Ievade}{#6}
-	\moduleFunctionTableItem{Apstrāde}{#7}
-	\moduleFunctionTableItem{Izvade}{#8}
-	\moduleFunctionTableItem{Paziņojumi}{#9}
+	\specificationTableItem{Funkcijas nosaukums}{#3}
+	\specificationTableItem{Funkcijas identifikators}{#4}
+	\specificationTableItem{Ievads}{#5}
+	\specificationTableItem{Ievade}{#6}
+	\specificationTableItem{Apstrāde}{#7}
+	\specificationTableItem{Izvade}{#8}
+	\specificationTableItem{Paziņojumi}{#9}
 }
