feat(RoleAction): add RoleAction table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -1,3 +1,6 @@
 \subsection{Datu bāzes tabulu apraksts}
-Datubāzes tabulu lauku, datu tipi, lauka atribūti - obligātums, noklusētās vērtības, primārā atslēga, unikalitāte - ir aprakstītas atsevišķās tabulās (skat. x.1, x.2, … , x.n tab. % TODO: add all table references).
+Datubāzes tabulu lauku, datu tipi, lauka atribūti - obligātums, noklusētās vērtības, primārā atslēga,
+unikalitāte - ir aprakstītas atsevišķās tabulās (skat. x.1, x.2, … , x.n tab. % TODO: add all table references).
 Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kodējums.
+
+\input{./src/design/entities/role-action.tex}
