feat(RoleDisadvantage): add RoleDisadvantage table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -4,3 +4,4 @@ unikalitāte - ir aprakstītas atsevišķās tabulās (skat. x.1, x.2, … , x.n
 Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kodējums.
 
 \input{./src/design/entities/role-action.tex}
+\input{./src/design/entities/role-disadvantage.tex}
