feat(SubscriptionPrice): add SubscriptionPrice table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -6,3 +6,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/role-action.tex}
 \input{./src/design/entities/role-disadvantage.tex}
 \input{./src/design/entities/image.tex}
+\input{./src/design/entities/subscription-price.tex}
