feat(EmailConfirmation): add EmailConfirmation table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -8,3 +8,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/image.tex}
 \input{./src/design/entities/subscription-price.tex}
 \input{./src/design/entities/password-recovery.tex}
+\input{./src/design/entities/email-confirmation.tex}
