feat(AccountStatus): add AccountStatus table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -10,3 +10,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/password-recovery.tex}
 \input{./src/design/entities/email-confirmation.tex}
 \input{./src/design/entities/game-role.tex}
+\input{./src/design/entities/account-status.tex}
