--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -12,3 +12,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/game-role.tex}
 \input{./src/design/entities/account-status.tex}
 \input{./src/design/entities/subscription-status.tex}
+\input{./src/design/entities/room-status.tex}
