feat(GameSetup): add GameSetup table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -14,3 +14,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/subscription-status.tex}
 \input{./src/design/entities/room-status.tex}
 \input{./src/design/entities/user.tex}
+\input{./src/design/entities/game-setup.tex}
