update up to (but not including) 1st section

--- a/src/introduction/purpose.tex
+++ b/src/introduction/purpose.tex
@@ -1,3 +1,4 @@
 \subsection*{Nolūks}
-Šī dokumenta mērķis ir raksturot tiešsaistes platformas ``MAFIJA'' programmatūras prasības.
-Sistēma ir paredzēta individuāliem lietotājiem, kuru interesēs ir iesaistīties savstarpējā sociālā aktivitātē lomu spēles formātā.
+Šī dokumenta mērķis ir raksturot tiešsaistes sistēmas ``Mafija'' programmatūras
+prasības. Sistēma ir paredzēta individuāliem lietotājiem, kuru interesēs ir
+iesaistīties savstarpējā sociālā aktivitātē lomu spēles formātā.
