--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,20 +1,38 @@
 \section*{Anotācija}
 \setcounter{page}{2}
-Sociālā lomu spēle ``Mafija'' ir plaši pazīstama.
-Tā ir pieejama vairākos paveidos un formātos, kā arī piedāvā neierobežotu skaitu konfigurāciju un lomu.
-Spēlētāju ērtībai tiek piedāvāts lietotnes formāts, kas ietver norādījumus, informējot lietotāju par pieejamajām iespējām, un skaidrojumus, aprakstot spēles elementus un saskarni, ar mērķi vienkāršot tās spēlēšanu.
+Sociālā lomu spēle ``Mafija'' ir plaši pazīstama. Tā ir pieejama vairākos
+paveidos un formātos, kā arī piedāvā neierobežotu skaitu konfigurāciju un lomu.
+Spēlētāju ērtībai tiek nodrošināts tīmekļa vietnes formāts, kas ietver
+norādījumus, informējot lietotāju par pieejamajām iespējām, un skaidrojumus,
+aprakstot spēles elementus un saskarni, ar mērķi vienkāršot tās spēlēšanu.
 Tirgus izpēte apliecina, ka ir pieejami vairāki, nepilnvērtīgi risinājumi.
-Programmatūras prasību specifikācija apraksta sistēmas pamatprasības ar papildus funkcionalitāti, tostarp lomu klāsta papildināšanu, spēles konfigurāciju izveidi, kā arī priviliģēta lietotāja stāvokli (maksas lietotāja), izmantojot abonementa balstītu maksājumu sistēmu.
+Programmatūras prasību specifikācija apraksta sistēmas pamatprasības ar
+papildus funkcionalitāti, tostarp lomu klāsta papildināšanu, spēles
+konfigurāciju izveidi, kā arī priviliģētu lietotāju (maksas lietotāju),
+pielietojot abonementa paveida maksājumu sistēmu.
 
 \textbf{Atslēgvārdi:}
-Mafijas spēle, sistēmas prasības, specifikācijas dokuments, programmatūras uzlabošana, lomu spēles mehānika, vienkāršota spēlēšana, organizatoriski risinājumi, programmatūras prasību specifikācija, lietotāju veidots saturs, abonamenta maksājumi, maksas lietotājs.
+
+Mafijas spēle, sistēmas prasības, specifikācijas dokuments, programmatūras
+uzlabošana, lomu spēle, vienkāršota spēlēšana, organizatoriski risinājumi,
+programmatūras prasību specifikācija, lietotāju veidots saturs, abonements,
+maksas lietotājs, maskājumu apstrādātāja lietojumprogrammas saskarni (API).
 
 \section*{Abstract}
-The social role-playing game ``Mafia'' is widely known.
-It is available in various versions and formats, offering an unlimited number of configurations and roles.
-For the convenience of players, there is an application format that includes instructions, informing the user about available options, and explanations describing the game's elements and interface, to simplify its play.
-Market research confirms that several incomplete solutions are available.
-The software requirements specification describes the system's basic requirements with additional functionality, including expanding the range of roles, creating game configurations, and a privileged user status (premium user) using a subscription-based payment system.
+The social role-playing game ``Mafia'' is widely known. It is available in
+various versions and formats, offering an unlimited number of configurations
+and roles. For the convenience of players, the game is made as a web
+application that includes instructions, informing the user about available
+options, and explanations describing the game's elements and interface, to make
+it simpler. Market research confirms that several mediocre solutions are
+available. The software requirements specification describes the system's basic
+requirements with additional functionality, including expanding the range of
+roles, creating game configurations, and a privileged user (premium user) using
+a subscription-based payment system.
 
 \textbf{Keywords:}
-Mafia game, system requirements, specification document, software improvement, role-playing mechanics, simplified gameplay, organizational solutions, software requirements specification, user-generated content, subscription payments, premium user.
+
+Mafia game, system requirements, specification document, software improvement,
+role-playing, simplified gameplay, organizational solutions, software
+requirements specification, user-generated content, subscription, premium user,
+payment processor application program interface (API).
