--- a/src/introduction/overview.tex
+++ b/src/introduction/overview.tex
@@ -1,9 +1,22 @@
 \subsection*{Pārskats}
 
-Dokumenta ievads satur ievadinformāciju: dokumenta nolūku, izstrādājamās programmatūras, vispārīgu programmatūras nolūku un funkcijas, saistību ar citiem dokumentiem, kuru prasības tika izmantotas dokumenta izstrādāšanas gaitā un pārskatu par dokumenta daļu saturu ar skaidrojumu dokumenta organizāciju.
-Pirmajā nodaļa tiek aprakstīti faktori, kas var ietekmēt produktu un tā prasības.
-Nodaļā tiek pamatota programmatūras izstrādes motivācija un nolūks, aprakstītas produkta vieta citu sistēmu perspektīvā, galvenās augsta līmeņa darījumprasības, sistēmas lietotāju grupu lomas un mērķi, kā arī tiek uzskaitīti faktori, kas var ierobežot vai ietekmēt PPS.
-Otrajā nodaļā tiek norādītas izstrādājamās programmatūras konkrētas prasības, kas satur visu nepieciešamo programmatūras projektējuma veidošanai.
-Tā ietver: datu bāzes konceptuālo modeli, funkcionālās prasības, kas apraksta sistēmas funkciju sadalījumu pa moduļiem, arējās saskarnes prasības un sistēmas vispārējās prasības.
-Trešajā nodaļā tiek aprakstīts projektējums, kas ietver sistēmas sastāvdaļu aprakstu turpmākā sistēmas projektējuma atvieglošanai.
-Nodaļa satur datu sistēmas bāzes projektējumu un daļēju funkciju un lietotāju saskarņu projektējumu.
+Dokumenta ievads satur tā nolūku, izstrādājamās programmatūras skaidrojumu,
+vispārīgu programmatūras mērķi un funkciju klāstu, saistību ar citiem
+dokumentiem, kuru prasības tika izmantotas dokumenta izstrādāšanas gaitā, kā
+arīpārskatu par dokumenta daļu saturu ar dokumenta struktūras skaidrojumu.
+
+Pirmajā nodaļa tiek aprakstīti faktori, kas var ietekmēt produktu un tā
+prasības. Nodaļā tiek pamatota programmatūras izstrādes motivācija un nolūks,
+aprakstītas produkta vieta citu sistēmu perspektīvā, galvenās augsta līmeņa
+darījumprasības, sistēmas lietotāju grupu lomas un mērķi, kā arī tiek
+uzskaitīti faktori, kas var ierobežot vai ietekmēt programmatūras prasību
+specifikāciju.
+
+Otrajā nodaļā tiek norādītas konkrētas prasības, kas satur visu nepieciešamo
+programmatūras projektējuma veidošanai. Tā ietver: datu bāzes konceptuālo
+modeli, funkcionālās prasības, kas apraksta sistēmas funkciju sadalījumu pa
+moduļiem, arējās saskarnes prasības un sistēmas vispārējās prasības.
+
+Trešajā nodaļā tiek aprakstīts projektējums, kas ietver sistēmas sastāvdaļu
+aprakstu. Nodaļa satur datu bāzes projektējumu, tās fizisko modeli un daļēju
+funkciju un lietotāju saskarņu projektējumu. 
