--- a/src/introduction/scope.tex
+++ b/src/introduction/scope.tex
@@ -1,19 +1,35 @@
 \subsection*{Darbības sfēra}
 
-Platforma ``MAFIJA'' atdarina pazīstamu lomu spēli, kas ir sociāla galda spēle ar dedukcijas elementiem.
-Spēlē piedalās indivīdi - Spēlētāji, kas sadalīti vairākās grupās un tajās ietvertās lomās.
-Lomu grupa ``Ciems'' lomas ``Iedzīvotājs'' ietvaros cenšas izdibināt kuri ir lomu grupas ``Mafija'' locekļi.
-Mafijas mērķis ir radīt haosu ciema iedzīvotāju vidū un pakāpeniski izslēgt ciema iedzīvotājus no spēles, izmantojot stratēģisku manipulāciju vai spēlē paredzētās lomas darbības.
-Spēlētāji, kuri nav ietverti ne ``Ciems”, ne “Mafija'' lomu grupā cenšas sasniegt tiem iedalītās lomas darbības mērķi.
-Tikai mafijai ir informācija par to, kuri no spēlētāju loka pieder ``Mafija'' lomu grupai.
-Katram spēlētājam jāizmanto individuāla ierīce, kas nodrošina iespēju pieslēgties tīmeklim, lai pieteikties platformā, pievienotos konkrētajai spēlei un piedalītos tajā.
+Sistēma ``Mafija'' ir atvasināta no plaši pazīstamas sociālas lomu spēles, kas
+balstās dedukcijā. Spēlē piedalās indivīdi - Spēlētāji, kas sadalīti vairākās
+grupās un tajās ietvertās lomās. Lomu grupa ``Ciems'' lomas ``Iedzīvotājs''
+ietvaros cenšas izdibināt kuri ir lomu grupas ``Mafija'' locekļi. Mafijas mērķis
+ir radīt haosu ciema iedzīvotāju vidū un pakāpeniski izslēgt ciema iedzīvotājus
+no spēles, izmantojot stratēģisku manipulāciju vai iedalītās lomas darbības.
+Spēlētāji, kuri nav ietverti ne ``Ciems'', ne ``Mafija'' lomu grupā cenšas sasniegt
+tiem iedalītās lomas mērķi. Tikai ``Mafijas'' locekļiem ir informācija par to,
+kuri no spēlētāju loka pieder ``Mafija'' lomu grupai. Katram spēlētājam jāizmanto
+individuāla ierīce, kas var pieslēgties tīmeklim, lai pieteiktos sistēmā,
+pievienotos konkrētajai spēlei un piedalītos tajā.
 
-Katra spēlētāja ierīcē spēles sesijas laikā tiek parādīta individuāla informācija par iedalīto lomu un ar to saistītajām, pieejamajām darbībām, kuru nav paredzēts vai atļauts rādīt citiem spēlētājiem.
-Platformas vizuālā saskarne ietver informāciju par spēles aktuālo stāvokli, precīzāk, fāzi (diena / nakts), spēles ilgumu, palikušo spēlētāju skaitu un citiem spēli raksturojošiem faktoriem.
+Katra spēlētāja ierīcē spēles sesijas laikā tiek parādīta informācija par
+iedalīto lomu un ar to saistītajām, pieejamajām darbībām, kuru nav paredzēts
+vai atļauts rādīt citiem spēlētājiem. Sistēmas vizuālā saskarne ietver
+informāciju par spēles aktuālo stāvokli, precīzāk, fāzi (diena / nakts), spēles
+ilgumu, palikušo spēlētāju skaitu un citiem spēli raksturojošiem faktoriem.
 
-Spēlētāja darbību klāsts ir atkarīgas no iedalītās lomas un aktuālā spēles stāvokļa.
-Spēles organizātoram (maksas lietotājam) ir iespēja izveidot virtuālu telpu un pielāgot tās iestatījumus, lai organizētu spēli vai mainītu to uzstādījumu, kas ietver noteiktās lomas, kā arī mainīt un veidot jaunas lomas.
+Spēlētāja darbību klāsts ir atkarīgas no iedalītās lomas un aktuālā spēles
+stāvokļa. Spēles organizātoram (maksas lietotājam) ir iespēja izveidot virtuālu
+telpu un pielāgot tās iestatījumus, lai organizētu spēli vai mainītu to
+konfigurāciju, kas ietver noteiktās lomas, kā arī mainīt un veidot jaunas
+lomas.
 
-Katram spēlētājam tiek nodrošināta sihnronizēta informācija par spēles tekošo  stāvokli un pieejamajām darbībām, tai skaitā, paziņojumi par spēles stāvokļa izmaiņām.
+Katram spēlētājam tiek nodrošināta sihnronizēta informācija par spēles tekošo
+stāvokli un pieejamajām darbībām, tai skaitā, paziņojumi par spēles stāvokļa
+izmaiņām.
 
-Ārpus spēles sesijas, lietotājiem ir pieejams spēļu istabu saraksts, kas var ietvert gan atklātas, gan privātas virtuālās spēļu telpas, statistikas pārskats, kurā aplūkojama statistika par jau izspēlētajām spēlēm, un lietotāja profils, kurā var rediģēt lietotāja raksturojošo informāciju.
+Ārpus spēles sesijas, lietotājiem ir pieejams spēļu istabu saraksts, kas var
+ietvert gan atvērtas, gan privātas virtuālās spēļu telpas, statistikas
+pārskats, kurā pieejama statistika par jau izspēlētajām spēlēm, un lietotāja
+profils, kurā var rediģēt lietotāju raksturojošo informāciju.
+
