--- a/src/legends.tex
+++ b/src/legends.tex
@@ -1,22 +1,54 @@
 \section*{Apzīmējumu saraksts}
 \addcontentsline{toc}{section}{Apzīmējumu saraksts}
 
-Abonements - uz noteiktu laiku par maksu piešķirtās papildus lietotāja iespējas;
+\textbf{API} - lietojumprogrammu saskarne (angl. Application Program Interface);
 
-Karodziņš  - Būla mainīgais, i.e., mainīgais, kas var būt vai nu patiess vai nu nepatiess;
+\textbf{Abonements} - uz noteiktu laiku par maksu piešķirtās papildus lietotāja iespējas;
 
-PPS - programmatūras prasību specifikācija;
+\textbf{CSRF} - Starpvietņu pieprasījuma viltošana (angl. Cross-Site Request Forgery) - uzbrukuma veids, kurā ļaunprātīgi pieprasījumi tiek izsūtīti no lietotāja pārlūka, izmantojot lietotāja autentifikācijas datus;
 
-ER modelis - entitāšu saišu modelis (angl. entity relationship model);
+\textbf{DPD} - datu plūsmas diagramma;
 
-DPD - datu plūsmas diagramma;
+\textbf{ER modelis} - entitāšu saišu modelis (angl. Entity-Relationship model);
 
-Spēles istaba - lietotāju kopa, kas ir saistīti vienas spēles ietvaros, i.e., spēles instance;
+\textbf{GDPR} - vispārīgā datu aizsardzības regula (angl. General Data Protection Regulation) - Eiropas Savienības regula, kas nosaka kā jāapstrādā un jāaizsargā personu dati;
 
-Sistēmas loma - sistēmas lietotāju grupa ar noteiktām privilēģijām;
+\textbf{HTTP} - hiperteksta pārsūtīšanas protokols (angl. Hypertext Transfer Protocol) - protokols datu pārsūtīšanai tīmeklī, galvenokārt izmantojot tīmekļa lapas;
 
-Loma - spēlēs loma, kam piemīt noteiktās darbības un trūkumi;
+\textbf{IP adrese} - Interneta protokola adrese (angl. Internet Protocol address) - unikāls numurs, kas tiek piešķirts katrai ierīcei, kas ir savienota ar datoru tīklu, kas izmanto IP komunikāciju;
 
-Maksas siena - maksājums par lietotāju pieeju daļai no sistēmas piedāvātās funkcionalitātes;
+\textbf{Istaba} - lietotāju kopa, kas ir saistīti vienas spēles ietvaros, i.e., spēles instance;
 
-Spēlētājs - lietotāja ieraksts vienas virtuālās istabas kontekstā.
+\textbf{Izvairīšanās simboli} - izvairīšanās simboli (angl. escape symbols vai escape characters) ir īpaši simboli, kas ļauj iekļaut teksta virknēs simbolus, kuri parasti ir rezervēti citām funkcijām;
+
+\textbf{Karodziņš} - Būla mainīgais, i.e., mainīgais, kas var būt patiess vai nepatiess;
+
+\textbf{Komandu injekcija} - drošības uzbrukuma veids, kurā uzbrucējs var izpildīt ļaunprātīgas komandas sistēmā, izmantojot drošības nepilnības;
+
+\textbf{Loma} - spēlēs loma, kam piemīt noteiktas darbības un mērķis;
+
+\textbf{Maksas siena} - maksājums par lietotāju pieeju daļai no sistēmas piedāvātās funkcionalitātes;
+
+\textbf{OWASP} - atvērtā tīmekļa lietojumprogrammu drošības projekts (angl. Open Web Application Security Project) - starptautiska bezpeļņas organizācija, kas izstrādā un popularizē drošības labās prakses tīmekļa lietojumprogrammās;
+
+\textbf{PPA} - programmatūras projektējuma apraksts;
+
+\textbf{PPS} - programmatūras prasību specifikācija;
+
+\textbf{SQL injekcija} - drošības apdraudējums, kas rodas, kad uzbrucējs var ievietot vai "injicēt" SQL komandas datu bāzes vaicājumā, tādējādi mainot tā darbību vai izgūstot konfidenciālu informāciju;
+
+\textbf{Sanitizēšana} - Datu vai ievades apstrāde, lai noņemtu vai neitralizētu potenciāli kaitīgus vai nevēlamus elementus;
+
+\textbf{Sistēmas loma} - sistēmas lietotāju grupa ar noteiktām privilēģijām;
+
+\textbf{Skripts} - Automatizēta instrukciju virkne, kas izpilda noteiktas darbības programmēšanas vai sistēmas vidē;
+
+\textbf{Spēlētājs} - lietotāja ieraksts vienas virtuālās istabas kontekstā;
+
+\textbf{Sāls pievienošana} - Drošības metode, kurā pirms paroles jaucējfunkcijas izmantošanas tai tiek pievienots nejaušs simbolu virknes fragments, lai padarītu paroles atšifrēšanu sarežģitāku;
+
+\textbf{UTF8} - Vienota teksta formāta kodējums 8-bitu garumā (angl. Unicode Transformation Format - 8 bit) - populārs teksta kodējums, kas atbalsta visu pasaules valodu rakstzīmes;
+
+\textbf{WCAG - Tīmekļa satura pieejamības vadlīnijas (angl. Web Content Accessibility Guidelines)} - starptautiski standarti, kas nosaka, kā padarīt tīmekļa saturu pieejamāku cilvēkiem ar dažādām invaliditātēm;
+
+\textbf{XSS} - Starpvietņu skriptēšana (angl. Cross-Site Scripting) - drošības uzbrukuma veids, kurā uzbrucēji ievieto ļaunprātīgus skriptus tīmekļa lapā, kas tiek izpildīti citu lietotāju pārlūkos.
