--- a/src/design/entities/game-setup.tex
+++ b/src/design/entities/game-setup.tex
@@ -1,4 +1,4 @@
-\begin{entityTable}{SpelesKonfiguracija}{enity-game-setup}
+\begin{entityTable}{SpelesKonfiguracija}{entity-game-setup}
 	\entityTableRow{nosaukums}{varchar(255)}{unique, not null}{Konfigurācijas nosaukums}
 	\entityTableRow{apraksts}{text}{default '', not null}{Konfigurācijas apraksts}
 	\entityTableRow{ir\_pamata}{bool}{default false, not null}{Vai spēles konfigurācijas ir spēles pamatā vai lietotāju izveidots}
