feat(GameEvent): add GameEvent table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -16,3 +16,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/user.tex}
 \input{./src/design/entities/game-setup.tex}
 \input{./src/design/entities/room.tex}
+\input{./src/design/entities/game-event.tex}
