feat(PaidSubscription): add PaidSubscription table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -18,3 +18,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/room.tex}
 \input{./src/design/entities/game-event.tex}
 \input{./src/design/entities/player.tex}
+\input{./src/design/entities/paid-subscription.tex}
