feat(Message): add Message table

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -19,3 +19,4 @@ Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kod
 \input{./src/design/entities/game-event.tex}
 \input{./src/design/entities/player.tex}
 \input{./src/design/entities/paid-subscription.tex}
+\input{./src/design/entities/message.tex}
