--- a/src/description/customer.tex
+++ b/src/description/customer.tex
@@ -1,2 +1,4 @@
 \subsection{Pasūtītājs}
-Sistēma nav izstrādāta pēc konkrēta pasūtītāja pieprasījuma, tā ir raksturota un projektēta ar iespēju realizēt pēc studentu grupas iniciatīvas programminženierijas kursa ietvaros.
+Sistēma nav izstrādāta pēc konkrēta pasūtītāja pieprasījuma, tā ir raksturota
+un projektēta ar iespēju realizēt pēc studentu grupas iniciatīvas
+programminženierijas kursa ietvaros.
