--- a/src/description/restrictions.tex
+++ b/src/description/restrictions.tex
@@ -1,19 +1,21 @@
 \subsection{Vispārējie ierobežojumi}
 \begin{enumerate}
-	\item Drošības un aizsardzības apsvērumi:
-	      \begin{enumerate}
-		      \item Lietotāju paroles tiek uzglabātas šifrētā veidā, izmantojot SHA-2 algoritmu.
-		      \item Tiek izmantota trešās puses autentifikācijas integrācija (izmantojot ārējas bibliotēkas).
-	      \end{enumerate}
-	\item Regulējoša politika:
-	      \begin{enumerate}
-		      \item Par analītikas nolūkos izmantotu sīkdatņu atļauja tiek prasīta.
-	      \end{enumerate}
-	\item Izstrādes vides, tehnoloģijas un tīmekļa ierobežojumi
-	      \begin{enumerate}
-		      \item Valodas, to tehniskie ierobežojumi;
-		      \item Responsivitāte;
-		      \item Sistēmas lietotāju saskarne ir realizējama caur tīmekļa vietni;
-		      \item Sistēmas ietvaros mitināta vietne ir kopīga neatkarīgi no ierīces, no kuras tā tiek izmantota (netiek izmantots apakšdomēna vārds mobilo tālruņu lietotājiem).
-	      \end{enumerate}
+
+\begin{enumerate}
+    \item Drošības un aizsardzības apsvērumi:
+        \begin{enumerate}
+            \item Lietotāju paroles tiek šifrētas pirms glabāšanas, izmantojot SHA-2 algoritmu;
+            \item Tiek izmantota trešās puses autentifikācijas integrācija.
+        \end{enumerate}
+    \item Regulējošās politikas apsvērumi:
+        \begin{enumerate}
+            \item Tiek pieprasīta lietotāju atļauja realizēt analītisku datu ievākšanu, izmantojot sīkdatnes..
+        \end{enumerate}
+    \item Izstrādes vides, tehnoloģijas un tīmekļa ierobežojumi:
+        \begin{enumerate}
+            \item Programmēšanas valodas, to tehniskie ierobežojumi;
+            \item Responsivitāte;
+            \item Sistēmas saskarne ir tīmekļa vietne;
+            \item Sistēmas ietvaros mitināta vietne ir kopīga neatkarīgi no ierīces (netiek izmantots apakšdomēns mobilo tālruņu lietotājiem).
+        \end{enumerate}
 \end{enumerate}
