--- a/src/description/current-situation.tex
+++ b/src/description/current-situation.tex
@@ -1,4 +1,9 @@
 \subsection{Esošā stāvokļa apraksts}
-Tirgū pastāv vairākas platformas un citi programmatūras formāti, piemēram, lietotnes, kas piedāvā dažādas lomu spēļu variācijas, to skaitā, ``Warewolf online'', ``Town of Salem'', ``Mafia.gg'', ``BeyondMafia'' un ``Mafia: The Game'' un daudzi citi.
-Esošiem risinājumiem ir vairākas problēmas: maksas piekļuve, pārmērīgs iespēju skaits, kas ir pieejamas tikai par maksu, spēle ir pieejama tikai uz mobilā viedtālruņa.
-``MAFIJA'' īstenos svarīgākās no esošo spēļu iespējām un pievienos jaunas iespējas, kas papildinās un uzlabos lietotāju pieredzi, kā arī samazinās maksas funcionalitāti.
+Tirgū pastāv vairākas sistēmas un citi programmatūras formāti, piemēram,
+lietotnes, kas piedāvā dažādas lomu spēļu variācijas, to skaitā, ``Warewolf
+online'', ``Town of Salem'', ``Mafia.gg'', ``BeyondMafia'', ``Mafia: The Game''
+un daudzi citi. Esošiem risinājumiem ir vairākas problēmas: maksas piekļuve,
+pārmērīgs iespēju skaits, kas ir pieejamas tikai par maksu, spēle ir pieejama
+tikai uz mobilā viedtālruņa. “Mafija” īstenos svarīgākās no esošo spēļu
+iespējām un pievienos jaunas iespējas, kas papildinās un uzlabos lietotāju
+pieredzi, kā arī samazinās maksas funkciju īpatsvaru.
