--- a/src/description/perspective.tex
+++ b/src/description/perspective.tex
@@ -1,6 +1,11 @@
 \subsection{Produkta perspektīva}
-Sistēma tiek integrēti vai izmantoti citu uzņēmumu un izstrādātāju piedāvāti pakalpojumi.
-Produkta realizācijā ir paredzēts izmantot maksājumu apstrādāšanas pakalpojumus, kamēr tie atbilst sistēmas pieprasītajai funckionalitātei un piedāvā optimālākos, kā arī drošākos un efektīvākos risinājumus tirgū.
+Sistēmā tiek integrēti vai izmantoti citu uzņēmumu un izstrādātāju piedāvāti
+pakalpojumi. Produkta realizācijā ir paredzēts izmantot maksājumu apstrādāšanas
+pakalpojumus, kamēr tie atbilst sistēmas pieprasītajai funkcionalitātei un
+piedāvā optimālākos, kā arī drošākos un efektīvākos risinājumus tirgū.
 
-Maksājumu apstrādātājs tiks izmantots, lai īstenotu lietotāju maksas pakalpojumi iegādi noteikto papildus iespēju iegūšanai uz noteiktu laiku.
-Maksājuma pieprasījuma un stāvokļa dati tiek uzblabāti sistēmā, taču pati apstrāde notiek ārējās sistēmas ietvaros.
+Maksājumu apstrādātājs realizēs lietotāju maksas pakalpojumu iegādi konkrētu
+papildus funkciju iegūšanai uz noteiktu laiku. Abonementa detaļas tiek glabātas
+sistēmā. Tiks izmantota pakalpojumu sniedzēja nodrošināta maksājumu apstrāde
+ārpus ``MAFIJA'' sistēmas, glabājot minimālu informāciju, tas ir, klienta
+identifikatoru.
