--- a/src/description/requirements.tex
+++ b/src/description/requirements.tex
@@ -1,17 +1,18 @@
 \subsection{Darījumprasības}
-Sistēmā ``MAFIJA'' tiks  realizētas sekojošās darījumprasības:
+
+Sistēmā tiks realizētas sekojošās darījumprasības:
 \begin{enumerate}
-	\item Lietotāju reģistrācija, autentifikācija;
-	\item Lietotāju un to privilēģiju pārvalde;
-	\item Lietotāju konta apstiprināšana, izmantojot e-pastu;
-	\item Lietotāju profilu personalizācija un kontu rediģešana;
-	\item Lietotāju stāvokļa virtuālajās telpās uzturēšana un izmaiņa;
-	\item Lietotāju informēšana, izmantojot paziņojumu sistēmu;
-	\item Sinhronizēta spēles stāvokļa atjaunināšana;
-	\item Spēles uzstādījumu un lomu klāsta publiska veidošana, rediģēšana un dzēšana;
-	\item Publisko un privāto virtuālo spēles istabu pārvalde;
-	\item Spēles automātiska vadība;
-	\item Kopēja un ierobežotu grupu (lomu atkarīga) tērzēšana;
-	\item Privilēģiju izmaiņa, izmantojot bezpersonisku maksājumu sistēmu;
-	\item Lietotāju moderēšana;
+	\item{Lietotāju reģistrācija, autentifikācija;}
+	\item{Lietotāju un to privilēģiju pārvalde;}
+	\item{Lietotāju konta apstiprināšana, izmantojot e-pastu;}
+	\item{Lietotāju profilu personalizācija un kontu rediģešana;}
+	\item{Lietotāju stāvokļa virtuālajās telpās uzturēšana un izmaiņa;}
+	\item{Lietotāju informēšana, izmantojot paziņojumu sistēmu;}
+	\item{Sinhronizēta spēles stāvokļa atjaunināšana;}
+	\item{Spēles uzstādījumu un lomu klāsta veidošana, rediģēšana un dzēšana;}
+	\item{Atvērto un privāto virtuālo spēles istabu pārvalde;}
+	\item{Spēles automātiska vadība;}
+	\item{Kopēja un ierobežota (lomu grupu atkarīga) tērzēšana;}
+	\item{Privilēģiju izmaiņa, izmantojot bezpersonisku maksājumu sistēmu;}
+	\item{Lietotāju moderēšana;}
 \end{enumerate}
