--- a/src/description/users.tex
+++ b/src/description/users.tex
@@ -1,18 +1,25 @@
 \subsection{Sistēmas lietotāji}
 
+Neautentificēts lietotājs (viesis), i.e., viesis ir jebkurš lietotājs, kas nav
+pieteicies vai reģistrējies sistēmā. Šiem lietotājiem ir pieejamas funkcijas,
+lai reģistrētos vai pieteiktos sistēmā;
 
-Nereģistrēts lietotājs (viesis) lietotāju grupas lietotāji nav reģistrēti datubāzē, i.e., viesis ir jebkurš lietotājs, kas nav pieteicies autentifikācijai vai kuram nav konta.
-Tas var reģistrēties vai atjaunot savu lietotāja profilu;
+Kad lietotājs ir pieteicies un ir autentificēts, tam ir pieejamas registrēta
+lietotāja grupas privilēģijas, precīzāk, darbības saistītas ar spēli, profilu
+un konta pārvaldi. Tā būs vislielākā grupa pēc lietotāju skaita. Maksas
+lietotājiem, precīzāk, reģistrētiem lietotājiem, kuriem piesaistīts aktīvs
+abonements, tiek piešķirtas papildus funkcijas - izveidot jaunas virtuālās
+istabas, izvēlēties spēles konfigurāciju savās istabās un citas. Maksas
+lietotāja grupa ir atvasināta no reģistrēta lietotāja grupas.
 
-Kopš lietotājs ir pieteicies un tika autentificēts, tam ir pieejamas registrēta lietotāja grupas darbības, kas as spēli, profilu, kontu saistītās darbības.
-Lielākā daļa lietotāju piederēs šaj lietotāju grupai.
-Papildus reģistrētiem lietotājiem, par kuru kļūst jebkurš reģistrējies lietotājs, daļai no lietotāji maksas lietotāja grupā, kam ir pieejama papildus uz noteiktu laiku periodu pieejamā funkcionalitāte, kā veidot jaunas virtuālās istabas, spēļu uzstādījumu, jaunas lomas u.c.
-Reģistrēta lietotāja un maksas lietotāja grupu apvieno spēles funkcionalitāte, kas ir vajadzīga pamata sistēmas mērķa realizēšanai - spēles procesam.
+Administratoru uzdevumi ietver istabu uzturēšanu un  lietotāju moderēšanu ar
+darbībām, kā bloķēšana, spēles istabas un lietotāju stāvokļa izmainīšana, konta
+informācijas izmaiņa, lomu uzstādījumu un spēles konfigurācijas rediģēšana.
+Lietotājs ``Sistēma'' izpilda noteiktas, ar spēles gaitu saistītas darbības, kas
+notiek automātiski un kas nav tiešā veidā citu lietotāju grupu kompetencēs.
 
-Administratoru grupas mērķis ir uzturēt un regulēt istabas un lietotājus ar darbībām, kā bloķēšana, spēles istabas un lietoāju stāvokļa izmainīšana, konta informācijas izmaiņa, lomu uzstādījumu un spēles uzstādījumu rediģēšana.
-Lietotājs ``Sistēma'' veic noteiktas ar spēles gaitu saistītas darbības, kas notiek automātiski un nav citu lietotāju grupu veicamas tiešā veidā.
-
-Ar lietotājiem saistītās datu plūsmas ir attēlotas sistēmas nultā līmeņa DPD (\ref{fig:dpd-0} attēls).
+Ar lietotājiem saistītās datu plūsmas ir attēlotas sistēmas nultā līmeņa DPD
+(\ref{fig:dpd-0}).
 
 
 \begin{figure}[htbp]
