--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -8,6 +8,7 @@
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{array}
 \usepackage{indentfirst}
 \usepackage{multicol}
 \usepackage{multirow}
@@ -32,11 +33,10 @@
 % \usepackage{mdframed}
 \usetikzlibrary{positioning}
 
-
 \hypersetup{
 	colorlinks=true,
 	linkcolor=black,
-	urlcolor=blue
+	urlcolor=black
 }
 
 \urlstyle{rm}
