--- a/src/description/dependencies.tex
+++ b/src/description/dependencies.tex
@@ -1,18 +1,17 @@
 \subsection{Pieņēmumi un atkarības}
 \begin{itemize}
-    \item Ierīce atbilst un spēj pilnvērtīgi izpildīt sistēmas prasības;
+	\item Ierīce atbilst un spēj pilnvērtīgi izpildīt sistēmas prasības;
 
-    \item Ierīce uztur stabilu un atbilstoša ātruma interneta savienojumu;
+	\item Ierīce uztur stabilu un atbilstoša ātruma interneta savienojumu;
 
-    \item Sistēmā tiks integrēta maksājumu apstrādātāja lietojumprogrammas
-        saskarne, kas rediģēs noteiktas lietotāja privilēģijas, sniedzot
-        iespēju iegādāties papildus funkcijas;
+	\item Sistēmā tiks integrēta maksājumu apstrādātāja lietojumprogrammas
+	      saskarne, kas rediģēs noteiktas lietotāja privilēģijas, sniedzot
+	      iespēju iegādāties papildus funkcijas;
 
-    \item Lietotāja izvēlētā pārlūkprogramma atbilst un spēj pilnvērtīgi
-        izpildīt sistēmas prasības;
+	\item Lietotāja izvēlētā pārlūkprogramma atbilst un spēj pilnvērtīgi
+	      izpildīt sistēmas prasības;
 
-    \item Maksājumus apstrādās pasūtītāja izvēlēts pakalpojumu sniedzējs,
-        nodrošinot tīmekļa vietnes saskarni maksājuma veikšanai un tā apstrādi
-        ārpus “MAFIJA” sistēmas;
-
+	\item Maksājumus apstrādās pasūtītāja izvēlēts pakalpojumu sniedzējs,
+	      nodrošinot tīmekļa vietnes saskarni maksājuma veikšanai un tā apstrādi
+	      ārpus ``MAFIJA'' sistēmas.
 \end{itemize}
