--- a/src/description/restrictions.tex
+++ b/src/description/restrictions.tex
@@ -1,21 +1,20 @@
 \subsection{Vispārējie ierobežojumi}
-\begin{enumerate}
 
 \begin{enumerate}
-    \item Drošības un aizsardzības apsvērumi:
-        \begin{enumerate}
-            \item Lietotāju paroles tiek šifrētas pirms glabāšanas, izmantojot SHA-2 algoritmu;
-            \item Tiek izmantota trešās puses autentifikācijas integrācija.
-        \end{enumerate}
-    \item Regulējošās politikas apsvērumi:
-        \begin{enumerate}
-            \item Tiek pieprasīta lietotāju atļauja realizēt analītisku datu ievākšanu, izmantojot sīkdatnes..
-        \end{enumerate}
-    \item Izstrādes vides, tehnoloģijas un tīmekļa ierobežojumi:
-        \begin{enumerate}
-            \item Programmēšanas valodas, to tehniskie ierobežojumi;
-            \item Responsivitāte;
-            \item Sistēmas saskarne ir tīmekļa vietne;
-            \item Sistēmas ietvaros mitināta vietne ir kopīga neatkarīgi no ierīces (netiek izmantots apakšdomēns mobilo tālruņu lietotājiem).
-        \end{enumerate}
+	\item Drošības un aizsardzības apsvērumi:
+	      \begin{enumerate}
+		      \item Lietotāju paroles tiek šifrētas pirms glabāšanas, izmantojot SHA-2 algoritmu;
+		      \item Tiek izmantota trešās puses autentifikācijas integrācija.
+	      \end{enumerate}
+	\item Regulējošās politikas apsvērumi:
+	      \begin{enumerate}
+		      \item Tiek pieprasīta lietotāju atļauja realizēt analītisku datu ievākšanu, izmantojot sīkdatnes.
+	      \end{enumerate}
+	\item Izstrādes vides, tehnoloģijas un tīmekļa ierobežojumi:
+	      \begin{enumerate}
+		      \item Programmēšanas valodas, to tehniskie ierobežojumi;
+		      \item Responsivitāte;
+		      \item Sistēmas saskarne ir tīmekļa vietne;
+		      \item Sistēmas ietvaros mitināta vietne ir kopīga neatkarīgi no ierīces (netiek izmantots apakšdomēns mobilo tālruņu lietotājiem).
+	      \end{enumerate}
 \end{enumerate}
