style: replace regular quetes to LaTeX quotes

--- a/src/description/current-situation.tex
+++ b/src/description/current-situation.tex
@@ -4,6 +4,6 @@ lietotnes, kas piedāvā dažādas lomu spēļu variācijas, to skaitā, ``Warew
 online'', ``Town of Salem'', ``Mafia.gg'', ``BeyondMafia'', ``Mafia: The Game''
 un daudzi citi. Esošiem risinājumiem ir vairākas problēmas: maksas piekļuve,
 pārmērīgs iespēju skaits, kas ir pieejamas tikai par maksu, spēle ir pieejama
-tikai uz mobilā viedtālruņa. “Mafija” īstenos svarīgākās no esošo spēļu
+tikai uz mobilā viedtālruņa. ``Mafija'' īstenos svarīgākās no esošo spēļu
 iespējām un pievienos jaunas iespējas, kas papildinās un uzlabos lietotāju
 pieredzi, kā arī samazinās maksas funkciju īpatsvaru.
