--- a/src/introduction/documents.tex
+++ b/src/introduction/documents.tex
@@ -1,4 +1,4 @@
 \subsection*{Saistība ar citiem dokumentiem}
-PPS ir izstrādāta, ievērojot LVS 68:1996 “Programmatūras prasību specifikācijas
-ceļvedis`` un LVS 72:1996 ''Ieteicamā prakse programmatūras projektējuma
-aprakstīšanai” standarta prasības.
+PPS ir izstrādāta, ievērojot LVS 68:1996 ``Programmatūras prasību
+specifikācijas ceļvedis`` un LVS 72:1996 ''Ieteicamā prakse programmatūras
+projektējuma aprakstīšanai” standarta prasības.
