reformat: Function modules

--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -41,7 +41,6 @@
 
 \urlstyle{rm}
 
-\renewcommand{\contentsname}{Saturs}
 
 \titlespacing*{\section}{0pt}{2em}{2em}
 \titlespacing*{\subsection}{0pt}{2em}{2em}
@@ -107,6 +106,7 @@
 \cftsetindents{section}{0.5cm}{0.5cm}
 \cftsetindents{subsection}{1cm}{1cm}
 \cftsetindents{subsubsection}{1.5cm}{1.5cm}
+\renewcommand{\contentsname}{Saturs}
 % \addto\captionslatvian{
 % 	\renewcommand{\contentsname}{Satura rādītājs}
 % }
@@ -130,7 +130,7 @@
 \input{./src/legends.tex}
 \input{./src/description/index.tex}
 \input{./src/requirements/index.tex}
-\input{./src/design/index.tex}
+% \input{./src/design/index.tex}
 % \input{./src/test.tex}
 
 \end{document}
