--- a/src/requirements/functional-requirements/modules/chat/TMF03.tex
+++ b/src/requirements/functional-requirements/modules/chat/TMF03.tex
@@ -1,7 +1,7 @@
 \moduleFunctionTable
-{Īsziņu uzskaite}
+{Īsziņu pārskats}
 {mod-func-chat-overview}
-{Īsziņu uzskaite}
+{Īsziņu pārskats}
 {TMF03}
 {
 	Funkcija nepieciešama, lai uzskaitītu un parādītu visas uzrakstītās īsziņas visās tērzētavās.
