--- a/src/requirements/functional-requirements/modules/game-progress/SGMF04.tex
+++ b/src/requirements/functional-requirements/modules/game-progress/SGMF04.tex
@@ -1,7 +1,7 @@
 \moduleFunctionTable
-{Spēles stāvokļa pārskats}
+{Spēles stāvokļa detaļas}
 {mod-func-progress-state-overview}
-{Spēles stāvokļa pārskats}
+{Spēles stāvokļa detaļas}
 {SGMF04}
 {
 	Funkcijas mērķis par spēles tagadējo stāvokli, kas ietver spēlētāju stāvokli, nakts numuru un atļautās darbības.
