--- a/src/requirements/functional-requirements/modules/game-role/SLMF01.tex
+++ b/src/requirements/functional-requirements/modules/game-role/SLMF01.tex
@@ -1,7 +1,7 @@
 \moduleFunctionTable
-{Lomas detaļu pārskats}
+{Lomas detaļu detaļas}
 {mod-func-role-details}
-{Lomas detaļu pārskats}
+{Lomas detaļu detaļas}
 {SLMF01}
 {
 	Funkcijas mērķis ir izvadīt specificētās lomas pārskatu.
