--- a/src/requirements/functional-requirements/modules/user/LAMF02.tex
+++ b/src/requirements/functional-requirements/modules/user/LAMF02.tex
@@ -1,7 +1,7 @@
 \moduleFunctionTable
-{Lietotāja konta datu pārskats}
+{Lietotāja konta detaļas}
 {mod-func-user-profile-data}
-{Lietotāja konta datu pārskats}
+{Lietotāja konta detaļas}
 {LAMF02}
 {
 	Funkcijas mērķis ir reģistrētiem lietotājiem iegūt konta savu informāciju, kas ietver gan publisko informāciju, gan privāto.
