--- a/src/requirements/functional-requirements/IO-functions/procedure/index.tex
+++ b/src/requirements/functional-requirements/IO-functions/procedure/index.tex
@@ -1,1 +1,8 @@
 \subsubsection{Kopīgās procedūras}
+
+\input{./src/requirements/functional-requirements/IO-functions/procedure/KPR01.tex}
+\input{./src/requirements/functional-requirements/IO-functions/procedure/KPR02.tex}
+\input{./src/requirements/functional-requirements/IO-functions/procedure/KPR03.tex}
+\input{./src/requirements/functional-requirements/IO-functions/procedure/KPR04.tex}
+\input{./src/requirements/functional-requirements/IO-functions/procedure/KPR05.tex}
+\input{./src/requirements/functional-requirements/IO-functions/procedure/KPR06.tex}
