--- a/src/requirements/functional-requirements/index.tex
+++ b/src/requirements/functional-requirements/index.tex
@@ -4,4 +4,4 @@
 
 \input{./src/requirements/functional-requirements/function-modules.tex}
 \input{./src/requirements/functional-requirements/IO-functions/index.tex}
-% \input{./src/requirements/functional-requirements/modules/index.tex}
+\input{./src/requirements/functional-requirements/modules/index.tex}
