--- a/src/requirements/index.tex
+++ b/src/requirements/index.tex
@@ -1,4 +1,4 @@
 \section{Programmatūras prasību specifikācija}
 \input{./src/requirements/conceptual-description.tex}
 \input{./src/requirements/functional-requirements/index.tex}
-% \input{./src/requirements/nonfunctional-requirements/index.tex}
+\input{./src/requirements/nonfunctional-requirements/index.tex}
