--- a/src/utils/function-table.tex
+++ b/src/utils/function-table.tex
@@ -38,7 +38,7 @@
 }
 
 \newcommand{\moduleFunctionTable}[9]{
-	\paragraph{#1}
+	% \paragraph{#1}
 	\begin{table}[h]
 		\caption{#1}\label{tab:#2}
 	\end{table}
@@ -49,17 +49,4 @@
 	\specificationTableItem{Apstrāde}{#7}
 	\specificationTableItem{Izvade}{#8}
 	\specificationTableItem{Paziņojumi}{#9}
-}
-
-\newcommand{\procedureTable}[8]{
-	\paragraph{#1}
-	\begin{table}[h]
-		\caption{#1}\label{tab:#2}
-	\end{table}
-	\specificationTableItem{Procedūras nosaukums}{#3}
-	\specificationTableItem{Procedūras identifikators}{#4}
-	\specificationTableItem{Procedūras apraksts}{#5}
-	\specificationTableItem{Ievade}{#6}
-	\specificationTableItem{Apstrāde}{#7}
-	\specificationTableItem{Izvade}{#8}
 }
