--- a/src/utils/index.tex
+++ b/src/utils/index.tex
@@ -1,3 +1,4 @@
 \input{./src/utils/function-table.tex}
 \input{./src/utils/entity-table.tex}
 \input{./src/utils/parameter-table.tex}
+\input{./src/utils/procedure-table.tex}
